--- a/app/assets/stylesheets/posts/new.scss
+++ b/app/assets/stylesheets/posts/new.scss
@@ -62,6 +62,8 @@
                             // text-align: center;
                             display: flex;
                             align-items: center;
+                            justify-content: left;
+                            // flex-wrap: wrap;
                             input {
                                 display: none;
                             }
@@ -74,9 +76,16 @@
                                 text-align: center;
                             }
                             .preview {
-                                // flex-wrap: wrap;
+                                flex-wrap: wrap;
                                 margin: 10px;
                                 display: flex;
+                                // width: 80%;
+                            }
+                            .btnbox-margin {
+                                margin: 0 10px;
+                            }
+                            .btnbox{
+                                margin: 10px;
                             }
                             .image_box {
                                 align-content: stretch;
