--- a/app/assets/stylesheets/posts/show.scss
+++ b/app/assets/stylesheets/posts/show.scss
@@ -21,6 +21,7 @@ body {
     box-sizing: border-box;
     p {
         height: 45px;
+        text-align: center;
     }
     .bold {
         .btn1 {
@@ -140,6 +141,16 @@ body {
         color: white;
     }
 }
+.item-buy-btn.bold2{
+    width: 620px;
+    height: 50px;
+    line-height: 50px;
+    background-color: #aaa;
+    color: #fff;
+    font-size: 20px;
+    text-align: center;
+    margin-top: 16px;
+}
 
 .item-description {
     width: 620px;
@@ -147,7 +158,8 @@ body {
 }
 
 .item-description-inner {
-    text-align: left;
+    word-break: break-word;
+    padding-bottom: 10px;
 }
 
 .item-button-container {
