カテゴリー表示でancestryを利用した記述に変更しました

--- a/app/views/posts/category.html.haml
+++ b/app/views/posts/category.html.haml
@@ -3,358 +3,30 @@
   - breadcrumb :category_posts
   = render "layouts/breadcrumbs"
 = render partial: "camera"
+
 .category
   .category_main
     .category_name
       %span カテゴリー一覧
     .category_lists
-      - @category.each.with_index do |category,i|
+      - @category_parent.each do |parent|  
         .category_list
-          =link_to category.name, "#", class:"category-style-#{i}"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category0 レディース
-        .category_content
-          %span トップス
-          .category_content-box
-            - Category.where(ancestry:"1/14").each do |category|
-              =link_to category.name, category_list_posts_path , class:"category-block"
-        .category_content
-          %span ジャケット/アウター
-          .category_content-box
-            - Category.where(ancestry:"1/15").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span パンツ
-          .category_content-box
-            - Category.where(ancestry:"1/16").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span スカート
-          .category_content-box
-            - Category.where(ancestry:"1/17").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span ワンピース
-          .category_content-box
-            - Category.where(ancestry:"1/18").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"1/19").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category1 メンズ
-        .category_content
-          %span トップス
-          .category_content-box
-            - Category.where(ancestry:"2/86").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span ジャケット/アウター
-          .category_content-box
-            - Category.where(ancestry:"2/87").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span パンツ
-          .category_content-box
-            - Category.where(ancestry:"2/88").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span スーツ
-          .category_content-box
-            - Category.where(ancestry:"2/89").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"2/90").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category2 ベビー・キッズ
-        .category_content
-          %span ベビー服(女の子用)
-          .category_content-box
-            - Category.where(ancestry:"3/145").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span ベビー服(男の子用)
-          .category_content-box
-            - Category.where(ancestry:"3/146").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 子ども用ファッション
-          .category_content-box
-            - Category.where(ancestry:"3/147").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span おむつ/トイレ/バス
-          .category_content-box
-            - Category.where(ancestry:"3/148").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"3/149").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category3 インテリア・住まい・小物
-        .category_content
-          %span キッチン/食器
-          .category_content-box
-            - Category.where(ancestry:"4/184").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span ベット/マットレス
-          .category_content-box
-            - Category.where(ancestry:"4/185").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span ソファー/ソファーベッド
-          .category_content-box
-            - Category.where(ancestry:"4/186").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 椅子/チェア
-          .category_content-box
-            - Category.where(ancestry:"4/187").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 机/テーブル
-          .category_content-box
-            - Category.where(ancestry:"4/188").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"4/189").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category4 本・音楽・ゲーム
-        .category_content
-          %span 本
-          .category_content-box
-            - Category.where(ancestry:"5/263").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 漫画
-          .category_content-box
-            - Category.where(ancestry:"5/264").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span CD
-          .category_content-box
-            - Category.where(ancestry:"5/265").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span テレビ/ゲーム
-          .category_content-box
-            - Category.where(ancestry:"5/266").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category5 おもちゃ・ホビー・グッズ
-        .category_content
-          %span おもちゃ
-          .category_content-box
-            - Category.where(ancestry:"6/301").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span トレーディングカード
-          .category_content-box
-            - Category.where(ancestry:"6/302").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span フィギュア
-          .category_content-box
-            - Category.where(ancestry:"6/303").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 楽器/器材
-          .category_content-box
-            - Category.where(ancestry:"6/304").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"6/305").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category6 コスメ・香水・美容
-        .category_content
-          %span ベースメイク
-          .category_content-box
-            - Category.where(ancestry:"7/372").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span メイクアップ
-          .category_content-box
-            - Category.where(ancestry:"7/373").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"7/374").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category7 家電・スマホ・カメラ
-        .category_content
-          %span スマートフォン/携帯電話
-          .category_content-box
-            - Category.where(ancestry:"8/404").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span PC/タブレット
-          .category_content-box
-            - Category.where(ancestry:"8/405").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span カメラ
-          .category_content-box
-            - Category.where(ancestry:"8/406").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"8/407").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category8 スポーツ・レジャー
-        .category_content
-          %span フィッシング
-          .category_content-box
-            - Category.where(ancestry:"9/436").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span トレーニング/エクササイズ
-          .category_content-box
-            - Category.where(ancestry:"9/437").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span サッカー/フットサル
-          .category_content-box
-            - Category.where(ancestry:"9/438").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"9/439").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category9 ハンドメイド
-        .category_content
-          %span ファッション/小物
-          .category_content-box
-            - Category.where(ancestry:"10/470").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span アクセサリー/時計
-          .category_content-box
-            - Category.where(ancestry:"10/471").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 日用品/インテリア
-          .category_content-box
-            - Category.where(ancestry:"10/472").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"10/473").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category10 チケット
-        .category_content
-          %span 音楽
-          .category_content-box
-            - Category.where(ancestry:"11/496").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span スポーツ
-          .category_content-box
-            - Category.where(ancestry:"11/497").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 演劇/芸能
-          .category_content-box
-            - Category.where(ancestry:"11/498").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"11/499").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category11 自動車・オートバイ
-        .category_content
-          %span 自動車本体
-          .category_content-box
-            - Category.where(ancestry:"12/533").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 自動車アクセサリー
-          .category_content-box
-            - Category.where(ancestry:"12/534").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span オートバイ車体
-          .category_content-box
-            - Category.where(ancestry:"12/535").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"12/536").each do |category|
-              =link_to category.name, "#", class:"category-block"
-    .category_box
-      .category_box2
-        .category_title
-          %span.category12 その他
-        .category_content
-          %span まとめ売り
-          .category_content-box
-            - Category.where(ancestry:"13/568").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 食品
-          .category_content-box
-            - Category.where(ancestry:"13/569").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span 飲料/酒
-          .category_content-box
-            - Category.where(ancestry:"13/570").each do |category|
-              =link_to category.name, "#", class:"category-block"
-        .category_content
-          %span その他
-          .category_content-box
-            - Category.where(ancestry:"13/571").each do |category|
-              =link_to category.name, "#", class:"category-block"
-          
+          = link_to category_posts_path(parent), class: "category-style-0" do
+            = parent.name
+    - @category_parent.each do |parent|
+      .category_box
+        .category_box2
+          .category_title
+            %span.catogory0= parent.name
 
+          - parent.children.each do |children|
+            .category_content
+              = link_to category_posts_path(children) do
+                = children.name
+            
+                .category_content-box
 
-  = render partial: "camera"
+                  - children.children.each do |grandchild|
+                    = link_to category_posts_path(grandchild), class: "category-block" do
+                      = grandchild.name
 = render partial: "footer"
