商品詳細ページでマウスオーバーした画像をメイン画像として表示させるようにしました。

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -10,7 +10,7 @@
             .items-box_photo__sold
               .items-box_photo__sold__inner
                 SOLD
-          = image_tag "#{@post.images[0].image_url}", size: '300x300', class:'post_show_photo_main'
+          = image_tag "#{@post.images[0].image_url}", size: '300x300', class:'post_show_photo_main mainImage'
           .owl-item-inner-box
           -@post.images.where("image_url is not NULL").each_with_index do |img, i|
             = image_tag "#{img.image_url}", size: '70x70',id: "image-#{i}",class:'post_show_photos'
